--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   body
   {
    text-align: center;
-   background:url("C:/Users/User/Desktop/img contents/ew0V5jf-wallpaper-of-study.jpg");
+   background:url("https://s21.postimg.org/99goq3887/ew0_V5jf_wallpaper_of_study.jpg");
    background-size: cover;
    background-position: center;
    color: white;
@@ -46,13 +46,13 @@
     color:white;
     margin:50px 0px 0px 0px;
   }
-  
+
   </style>
 </head>
 
 <body>
   <h1>MY NOTES</h1>
-  <img src="C:/Users/User/Desktop/img contents/IMG_20170220_001519_756.jpg">
+  <img src="https://s27.postimg.org/zetfdhi2r/IMG_20170220_001519_756.jpg">
   <p>hello i'm govinder.welcome in my notes world.</p>
   <input type="email" placeholder="your email">
   <input type="submit">
